# HIM

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
res/: ball.mtl  objShader.fs  objShader.vs  objShader1.fs  objShader1.vs
res/UFO/: UFO.blend  UFO.blend1  UFO.mtl
res/assets/: block.mtl
res/ball/: ball.blend  ball.mtl
res/cube/: Cube.blend  Cube.blend1  Cube.mtl
res/text/: congratulations.blend  congratulations.blend1  congratulations.mtl
src/: Application.cpp  Application.h  Window.cpp  Window.h  main.cpp  main.h  maze.cpp  maze.h  stb_image.cpp  text.cpp  text.h
utils/learnopengl/: camera.h  model.cpp  model.h  shader.h
